--- a/index.html
+++ b/index.html
@@ -41,5 +41,15 @@
     <div class="btn_bottom-line">Free 7-day trial</div>
   </div>
 </main>
+
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-149503062-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-149503062-1');
+</script>
 </body>
 </html>
