Removed CNAME, prevent download

--- a/index.html
+++ b/index.html
@@ -55,6 +55,8 @@
 
 <script>
   function downloadPlayly() {
+    return alert('Currently, downloading is not available');
+
     location = `versions/Playly%20${latestVersion}.dmg`;
   }
 
